# plus-vst3

./: .gitignore  CMakeLists.txt  README.md
Release/+.vst3/Contents/: Info.plist
Release/+.vst3/Contents/Resources/: moduleinfo.json
Release/+.vst3/Contents/_CodeSignature/: CodeResources
Source/: EffectBox.h  EffectSystem.h  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h  RotatingCubeInstanceImpl.cpp  StarfieldInstanceImpl.cpp
